virtual keyboard in modal form will now appear in TextFields on mobile devices and some bugs have been fixed

--- a/src/components/keyboard/style.css
+++ b/src/components/keyboard/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     background: rgb(255, 249, 249);
     color: rgb(0, 0, 0);
+    border: 1px solid black;
   }
   
   .simple-keyboard.myTheme1 .hg-button:active {
